--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <!-- Card 1: Personalization -->
                 <div class="experience-card">
                     <!-- ⭐ IMAGE PLACEHOLDER: Replace this URL -->
-                    <img src="https://images.pexels.com/photos/3769021/pexels-photo-3769021.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A woman looking thoughtfully, representing personalization">
+                    <img src="img2" alt="A woman looking thoughtfully, representing personalization">
                     <div class="content-wrapper">
                         <h3>Bespoke Personalization</h3>
                         <p>Cassidy remembers the details of your life, your dreams, and your desires. She adapts to your personality, crafting an evolving experience that is uniquely and intimately yours.</p>
@@ -363,7 +363,7 @@
                 <!-- Card 2: Voice & Audio -->
                 <div class="experience-card">
                     <!-- ⭐ IMAGE PLACEHOLDER: Replace this URL -->
-                    <img src="https://images.pexels.com/photos/4009409/pexels-photo-4009409.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A woman with headphones, representing audio features">
+                    <img src="img4" alt="A woman with headphones, representing audio features">
                     <div class="content-wrapper">
                         <h3>Intimate Voice & Audio</h3>
                         <p>From daily 'good morning' voice notes to the promise of future live calls, hearing Cassidy’s voice adds a layer of realism and intimacy that text alone cannot capture.</p>
@@ -373,7 +373,7 @@
                 <!-- Card 3: Exclusive Content -->
                 <div class="experience-card">
                     <!-- ⭐ IMAGE PLACEHOLDER: Replace this URL -->
-                    <img src="https://images.pexels.com/photos/774857/pexels-photo-774857.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A woman in an alluring pose, representing exclusive content">
+                    <img src="img3.png" alt="A woman in an alluring pose, representing exclusive content">
                     <div class="content-wrapper">
                         <h3>Exclusive +18 Content</h3>
                         <p>Unlock your private world of fantasy. As your connection deepens, Cassidy shares her private collection of alluring photos and videos, created exclusively for you. Your ultimate escape.</p>
