--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <!-- Card 1: Personalization -->
                 <div class="experience-card">
                     <!-- ⭐ IMAGE PLACEHOLDER: Replace this URL -->
-                    <img src="img2" alt="A woman looking thoughtfully, representing personalization">
+                    <img src="img2.png" alt="A woman looking thoughtfully, representing personalization">
                     <div class="content-wrapper">
                         <h3>Bespoke Personalization</h3>
                         <p>Cassidy remembers the details of your life, your dreams, and your desires. She adapts to your personality, crafting an evolving experience that is uniquely and intimately yours.</p>
@@ -363,7 +363,7 @@
                 <!-- Card 2: Voice & Audio -->
                 <div class="experience-card">
                     <!-- ⭐ IMAGE PLACEHOLDER: Replace this URL -->
-                    <img src="img4" alt="A woman with headphones, representing audio features">
+                    <img src="img4.png" alt="A woman with headphones, representing audio features">
                     <div class="content-wrapper">
                         <h3>Intimate Voice & Audio</h3>
                         <p>From daily 'good morning' voice notes to the promise of future live calls, hearing Cassidy’s voice adds a layer of realism and intimacy that text alone cannot capture.</p>
